# onecard-fido

./: .gitignore  .gitmodules  FORMER.md  HISTORY.md  LICENSE  LICENSES.md  OSSL.md  README.md  TODO.md
CCID/: BUILDCCIDDRV.md  INSTALLPRG.md  MACPIVLOGIN.md  PIVCARDEMUL.md  PIVTOOLMACINST.md  README.md  YKPIVUSAGE.md  YKPIVUSAGE_1.md
CCID/OATH/: README.md  RESEARCH.md
CCID/OpenPGP/: GPGINSTMAC.md  README.md  (+4 more)
Development/: ACTIVEPERL.md  ATECC608A.md  CHROMEOSTEST.md  FIDO2TODO.md  OPENSSLC.md  PAIRINGMODESIGN.md  PYU2FSVRLIB.md  QTSETUP.md  README.md  VS2015CPROJ.md
FIDO2DemoServer/: FIDO2LOCALSVR.md  README.md  WEBAUTHNTEST.md
FIDO2Device/: CONFORMANCE.md
MaintenanceTool/: DEVTOOL.md  MNTTOOL.md  README.md
MatterPoCKit/: CHIPNEWEST.md  DOCOMMAND.md  ESP32SAMPLE.md  ESP32SAMPLECMD.md  INSTALLFW.md  INSTALLPRG.md  INSTALLSDK.md  OTBRSETUP.md  OTRCPDONGLE.md  README.md  SETUPHUB.md  UPDATENCSSAMPLE.md  UPDATE_ANDROID_SAMPLE.md
Research/: APACHE_LOCAL_TSTSVR.md  BLECertificationTool.BUILD.md  CHROMEBLEAPP.md  CHROMEBLEEXT.md  CHROMEBLEEXTWIN.md  CHROMEOSTEST.md  CHROMEWBAPI.md  PYU2FSVRLIB.md  README.md  U2F_LOCAL_TSTSVR.md  WEBAUTHN_CHROME.md  WEBAUTHN_FF60.md  WEBAUTHN_GECKO.md  WEBAUTHN_INDEX.md  WEBAUTHN_LOCAL_TSTSVR.md  u2f-ble-helper.crx  u2f-ble-helper.pem
SECUREIC/: CRYPTOAUTHEMBD.md  README.md
STM32F411RE/: README.md
TFT/: ADATFTLIB.md  README.md
U2FDemoServer/: README.md  u2f-chrome-extension.crx  u2f-chrome-extension.pem
U2FHIDDevice/: readme.md
U2FMaintenanceTool/: README.md
Usage/: CERTTEST.md  DEMOSITETEST.md  GOOGLEACCTEST.md  HELPER_INSTALL.md  INSTALL.md  INSTALL_WINDOWS.md  PAIRING.md  README.md  TOOL_INSTALL.md
nRF52840_app/: ARMGCCINST.md  NETBEANSINST.md  NR5SDKINST.md  NRFCLTOOLINST.md  NRFCONNECTINST.md  NRFUTILINST.md  README.md
nRF5340_app/: BLEDFUFUNC.md  BLEDFU_FUNC_CSHARP.md  BLEDFU_FUNC_IOS.md  BLEDFU_FUNC_OBJC.md  BLEDFU_TRANSACTION.md  CONFIRMSDK.md  CUSTOMIZE.md  DFUFUNC.md  INSTALLBREWTOOL.md  INSTALLCMAKE.md  INSTALLFW_USB.md  INSTALLSDK.md  INSTALLVSCODE.md  README.md  SAMPLE_SCONLY.md  TECHNICAL.md  TECH_APP_SOURCES.md  TECH_BOARD.md  TECH_ZEP_SETTINGS.md
nRF5340_app/secure_device_app/: CMakeLists.txt  Kconfig  overlay-smp.conf  overlay-usb-dfu.conf  prj.conf  westbuild.sh
nRF5340_app/secure_device_app/boards/: nrf52840dk_nrf52840.conf  nrf5340dk_nrf5340_cpuapp.conf
nRF5340_app/secure_device_app/configuration/nrf52840dk_nrf52840/: PCA10059.overlay  PCA10059_01.overlay
nRF5340_app/secure_device_app/configuration/nrf5340dk_nrf5340_cpuapp/: PCA10095_01.conf  PCA10095_01.overlay  PCA10095_02.conf  PCA10095_02.overlay  tiny_tft.overlay
nRF5340_app/secure_device_app/include/: app_ble_advertise.h  app_ble_connection.h  app_ble_define.h  app_ble_fido.h  app_ble_init.h  app_ble_pairing.h  app_ble_smp.h  app_ble_unpairing.h  app_bluetooth.h  app_board.h  app_board_define.h  app_crypto.h  app_crypto_define.h  app_crypto_ec.h  app_crypto_rsa.h  app_crypto_util.h  app_dfu.h  app_event.h  app_fido.h  app_flash.h  app_flash_general_status.h  app_func.h  app_log.h  app_main.h  app_platform.h  app_process.h  app_rtcc.h  app_rtcc_define.h  app_settings.h  app_status_indicator.h  app_timer.h  app_timer_define.h  app_tiny_tft.h  app_tiny_tft_define.h  app_usb.h  app_usb_bos.h  app_usb_ccid_define.h  app_usb_hid.h
nRF5340_app/secure_device_app/src/: app_ble_advertise.c  app_ble_connection.c  app_ble_fido.c  app_ble_init.c  app_ble_pairing.c  app_ble_smp.c  app_ble_unpairing.c  app_bluetooth.c  app_board.c  app_crypto.c  app_crypto_ec.c  app_crypto_rsa.c  app_crypto_util.c  app_dfu.c  app_event.c  app_fido.c  app_flash.c  app_flash_general_status.c  app_func.c  app_log.c  app_main.c  app_platform.c  app_process.c  app_rtcc.c  app_settings.c  app_status_indicator.c  app_timer.c  app_tiny_tft.c  app_usb.c  app_usb_bos.c  app_usb_ccid.c  app_usb_hid.c  main.c
nRF5340_app/secure_device_app/wrapper/: ccid_crypto.c  ccid_crypto.h  ccid_flash_oath_object.c  ccid_flash_oath_object.h  ccid_flash_object.c  ccid_flash_object.h  ccid_flash_openpgp_object.c  ccid_flash_openpgp_object.h  ccid_flash_piv_object.c  ccid_flash_piv_object.h  fido_ble_unpairing.c  fido_crypto.c  fido_crypto.h  fido_flash.c  fido_flash.h  fido_status.c  fido_timer.c  platform_common.c  rtcc.c  tiny_tft_base.c
nRF5340_app/secure_device_app/zephyr_custom/subsys/mgmt/mcumgr/: CMakeLists.txt  smp_bt.c
nRF5340_app/secure_device_app/zephyr_custom/subsys/settings/src/: CMakeLists.txt
nRF5_SDK_v13.0.0/: BUILD.md  BUILDMECC.md  CERTTEST.md  CHROMEOSTEST.md  FIDOSWLIST.md  INSTALL.md  PAIRING.md  README.md
nRF5_SDK_v15.2.0/: ANDROID.md  PCCHROME.md  README.md
nRF5_SDK_v15.3.0/: APPINSTALL.md  CRYPTOAUTHEMBD.md  HookUpHIDBLMode.py  NETBEANSINST.md  NRFCONNECTINST.md  PCCHROME.md  PYHIDAPIINST.md  README.md
pyvenvs/: requirements_ncs.txt
pyvenvs/ncs/nRF5340_app/secure_device_app/: CMakeLists.txt  overlay-smp.conf  prj.conf  westbuild.sh
pyvenvs/ncs/nRF5340_app/secure_device_app/bluetooth/: app_ble_pairing.c  app_ble_pairing.h  app_bluetooth.c  app_bluetooth.h  bluetooth.c
pyvenvs/ncs/nRF5340_app/secure_device_app/include/: app_ble_pairing.h  app_bluetooth.h  app_board.h  app_board_define.h  app_crypto.h  app_crypto_define.h  app_crypto_ec.h  app_custom.h  app_data_event.h  app_data_process.h  app_event.h  app_main.h  app_process.h  app_timer.h  app_usb.h  app_usb_ccid.h  app_usb_ccid_define.h  app_usb_hid.h
pyvenvs/ncs/nRF5340_app/secure_device_app/src/: app_ble_pairing.c  app_bluetooth.c  app_board.c  app_board.h  app_crypto.c  app_crypto_ec.c  app_crypto_rsa.c  app_custom.c  app_data_event.c  app_data_process.c  app_event.c  app_event.h  app_flash.c  app_main.c  app_main.h  app_process.c  app_test.c  app_timer.c  app_timer_define.h  app_usb.c  app_usb_ccid.c  app_usb_hid.c  bluetooth.c  main.c
pyvenvs/ncs/nRF5340_app/secure_device_app/zephyr_custom/include/usb/class/: usb_ccid.h
pyvenvs/ncs/nRF5340_app/secure_device_app/zephyr_custom/subsys/mgmt/mcumgr/: smp_bt.c
pyvenvs/ncs/nRF5340_app/secure_device_app/zephyr_custom/subsys/usb/class/: usb_ccid.c
(+2786 files in other folders)
